vercre-wallet/src/snapshots/vercre_wallet__issuance__tests__credential-request.snap
---
source: vercre-wallet/src/issuance.rs
assertion_line: 493
expression: req
---
credential_identifier: EmployeeID_JWT
proof:
  proof_type: jwt
  jwt: a-signed-jwt.signature

