vercre-wallet/src/snapshots/vercre_wallet__issuance__tests__proof_jwt.snap
---
source: vercre-wallet/src/issuance.rs
assertion_line: 486
expression: "&jwt"
---
header:
  alg: EdDSA
  kid: "did:jwk:eyJjcnYiOiJYMjU1MTkiLCJrdHkiOiJPS1AiLCJ1c2UiOiJlbmMiLCJ4IjoiM0xnOXl2aUFtVERDdVZPeUxYSTNscTlTMnBIbTczeXIzd3dBa2p3Q0FodyJ9#0"
  typ: openid4vci-proof+jwt
claims:
  iss: "did:jwk:eyJjcnYiOiJYMjU1MTkiLCJrdHkiOiJPS1AiLCJ1c2UiOiJlbmMiLCJ4IjoiM0xnOXl2aUFtVERDdVZPeUxYSTNscTlTMnBIbTczeXIzd3dBa2p3Q0FodyJ9"
  aud: "http://vercre.io"
  iat: "[timestamp]"
  nonce: ""
