vercre-wallet/src/snapshots/vercre_wallet__issuance__tests__set-metadata.snap
---
source: vercre-wallet/src/issuance.rs
assertion_line: 381
expression: model.offered
---
EmployeeID_JWT:
  format: jwt_vc_json
  scope: EmployeeIDCredential
  cryptographic_binding_methods_supported:
    - "did:jwk"
    - "did:ion"
  credential_signing_alg_values_supported:
    - ES256K
    - EdDSA
  proof_types_supported:
    jwt:
      proof_signing_alg_values_supported:
        - ES256K
        - EdDSA
  display:
    - name: Employee ID
      locale: en-NZ
      logo:
        uri: "https://vercre.github.io/assets/vercre-logo-reversed.png"
        alt_text: Vercre Logo
      description: Vercre employee ID credential
      background_color: "#323ed2"
      background_image:
        uri: "https://vercre.github.io/assets/vercre-background.png"
        alt_text: Vercre Background
      text_color: "#ffffff"
  credential_definition:
    "@context":
      - "https://www.w3.org/2018/credentials/v1"
      - "https://www.w3.org/2018/credentials/examples/v1"
    type:
      - VerifiableCredential
      - EmployeeIDCredential
    credentialSubject:
      email:
        mandatory: true
        value_type: string
        display:
          - name: Email
            locale: en-NZ
      familyName:
        mandatory: true
        value_type: string
        display:
          - name: Family name
            locale: en-NZ
      givenName:
        mandatory: true
        value_type: string
        display:
          - name: Given name
            locale: en-NZ
