vercre-wallet/src/snapshots/vercre_wallet__issuance__tests__token_request.snap
---
source: vercre-wallet/src/issuance.rs
assertion_line: 462
expression: "&token_req"
---
client_id: 96bfb9cb-0513-7d64-5532-bed74c48f9ab
grant_type: "urn:ietf:params:oauth:grant-type:pre-authorized_code"
pre-authorized_code: cVJ9o7fKUOxLbyQAEbHx3TPkTbvjTHHH
user_code: "1234"
